--- a/src/com/ScratchHome/ScratchHome_language_en.properties
+++ b/src/com/ScratchHome/ScratchHome_language_en.properties
@@ -46,8 +46,8 @@ SB2Extension=Scratch extension file (*.sb2)
 
 ScratchMessageObjects=put %m.objectList in %m.colorList
 ScratchMessageLights=%m.colorList %m.objectList
-ScratchMessageObjectsEachBlock=mettre %s à %%m.colorList
-ScratchMessageObjectsEachLight=mettre %s à %%m.colorList
+ScratchMessageObjectsEachBlock=put %s to %%m.colorList
+ScratchMessageObjectsEachLight=put %s to %%m.colorList
 
 SwitchOn=Switch On
 SwitchOff=Switch Off
